# cpp-ipc

./: CMakeLists.txt  run_cmake.bat
CMake/: libipc-config.cmake
demo/chat/: CMakeLists.txt
demo/msg_que/: CMakeLists.txt
include/libipc/: export.h
src/: CMakeLists.txt
test/: CMakeLists.txt
vcpkg_port/libipc/: CONTROL  portfile.cmake
